    if scope is an empty, non-NULL BSON document.
  * bson_as_json properly formats BSON "code" and "code with scope" types
    like '{"$code": "...", "$scope": {}}'. Before, it had treated the code
    as a string and ignored the scope.
  * bson_json_reader functions now always validate UTF-8
  * JSON parsing now preserves integer width
  * New flag BSON_VALIDATE_EMPTY_KEYS causes bson_validate to fail if a document
    contains zero-length field names.
  * The configure option "--enable-hardening" had had no effect. It is removed
    in favor of system-wide compiler configuration.

Thanks to everyone who contributed to the development of this release.

  * Hannes Magnusson
  * A. Jesse Jiryu Davis
  * Fiona Rowan
  * Brian Samek

Peace,

    A. Jesse Jiryu Davis

Libbson-1.4.1
=============

This release improves the HTML documentation's Makefile.

-- A. Jesse Jiryu Davis


Libbson-1.4.0
=============

It is my pleasure to announce Libbson-1.4.0.

New features and bug fixes:

  * bson_reader_reset seeks to the beginning of a BSON buffer.
  * bson_steal efficiently transfers contents from one bson_t to another.
  * Fix Windows compile error with BSON_EXTRA_ALIGN disabled.
  * Potential buffer overrun in bson_strndup.
  * bson_oid_to_string optimization for MS Visual Studio
  * bson_oid_is_valid accepts uppercase hex characters.
  * bson_json_reader_read aborted on some invalid Extended JSON documents.
  * All man page names now begin with "bson_" to avoid install conflicts.
  * Error messages sometimes truncated at 63 chars.

This release tentatively supports the new BSON decimal type when built with
"./configure --enable-experimental-features", or with
"cmake -DENABLE_EXPERIMENTAL_FEATURES=ON", but this feature may change
between now and libbson 1.5.

Thanks to everyone who contributed to the development of this release.

  * A. Jesse Jiryu Davis
  * Hannes Magnusson
  * Jeremy Mikola
  * David Hatch
  * Ian Boros
  * Fiona Rowan
  * Shane Harvey
  * Runar Buvik